--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 	</head>
 	
 	<body>
+		<div id="main-container" class="bullseye box-shadow-1 border-radius">
+			<div id="top-screen">
+				<img src="img/grass.png" class="innerBattleScreen" />
+				<img src="img/chat_window.png" class="innerBattleScreen" />
+			</div>
+			<div id="bottom-screen">
+				<img src="img/toolbar_bg.png" class="innerBattleScreen" />
+			</div>
+		</div>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script type="text/javascript" src="js/javascript.js"></script>
