--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 	<body>
 		<div id="main-container" class="bullseye box-shadow-1 border-radius">
 			<div id="top-screen">
+				<img id = "charmander" src="img/charmander.png" class="absolute"/>
+				<img id = "charmanderInfo" src="img/your_info.png" class="absolute"/>
+				<img id = "pikachu" src="img/pikachu.png" class="absolute"/>
+				<img id = "pikachuInfo" src="img/enemy_info.png" class="absolute"/>
 				<img src="img/grass.png" class="innerBattleScreen" />
 				<img src="img/chat_window.png" class="innerBattleScreen" />
 			</div>
