--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
 		<div id="main-container" class="bullseye box-shadow-1 border-radius">
 			<div id="top-screen">
 				<img id = "charmander" src="img/charmander.png" class="absolute"/>
+				<div id = "userName" class="absolute">Charmander</div>
+				<div id="userLvl" class="absolute">lvl 100</div>
 				<img id = "charmanderInfo" src="img/your_info.png" class="absolute"/>
 				<img id = "pikachu" src="img/pikachu.png" class="absolute"/>
+				<div id = "cpuName" class="absolute">Pikachu</div>
+				<div id="cpuLvl" class="absolute">lvl 100</div>
 				<img id = "pikachuInfo" src="img/enemy_info.png" class="absolute"/>
 				<img src="img/grass.png" class="innerBattleScreen" />
 				<img src="img/chat_window.png" class="innerBattleScreen" />
