Added Health Bars and game over

--- a/index.html
+++ b/index.html
@@ -16,11 +16,21 @@
 				<img id = "charmander" src="img/charmander.png" class="absolute"/>
 				<div id = "userName" class="absolute">Charmander</div>
 				<div id="userLvl" class="absolute">lvl 100</div>
+				<div id="userHealthBarHolder" class="absolute">
+					<div id="userHealthBar" class="absolute"></div>
+				</div>
 				<img id = "charmanderInfo" src="img/your_info.png" class="absolute"/>
+
 				<img id = "pikachu" src="img/pikachu.png" class="absolute"/>
 				<div id = "cpuName" class="absolute">Pikachu</div>
 				<div id="cpuLvl" class="absolute">lvl 100</div>
+				<div id="cpuHealthBarHolder" class="absolute">
+					<div id="cpuHealthBar" class="absolute"></div>
+				</div>
 				<img id = "pikachuInfo" src="img/enemy_info.png" class="absolute"/>
+
+				<div id="chatText" class="absolute text-subhead">What will Charmander do?</div>
+
 				<img src="img/grass.png" class="innerBattleScreen" />
 				<img src="img/chat_window.png" class="innerBattleScreen" />
 			</div>
@@ -46,6 +56,7 @@
 						<img src="img/move.png" id="move4Button"/>
 					</div>
 				</div>
+				<div id="gameOver" class="absolute text-30 text-center hide">GAME OVER</div>
 				<img src="img/toolbar_bg.png" class="innerBattleScreen" />
 
 			</div>
