added charmander and pikachu objects

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 					</div>
 
 					<div id="move3-Button">
-						<div id="move3-Text" class="absolute text-18 text-center">Growl</div>
+						<div id="move3-Text" class="absolute text-18 text-center">Leer</div>
 						<img src="img/move.png" id="move3Button"/>
 					</div>
 
 					<div id="move4-Button">
-						<div id="move4-Text" class="absolute text-18 text-center">Smokescreen</div>
+						<div id="move4-Text" class="absolute text-18 text-center">Growl</div>
 						<img src="img/move.png" id="move4Button"/>
 					</div>
 				</div>
