--- a/index.html
+++ b/index.html
@@ -63,6 +63,6 @@
 		</div>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-		<script type="text/javascript" src="js/javascript.js"></script>
+		<script type="text/javascript" src="js/game.js"></script>
 	</body>
 </html>
