Added init function which will set cpuPokemon and userPokemon and grab their names and levels along with setting state to playerTurn

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 		<div id="main-container" class="bullseye box-shadow-1 border-radius">
 			<div id="top-screen">
 				<img id = "charmander" src="img/charmander.png" class="absolute"/>
-				<div id = "userName" class="absolute">Charmander</div>
-				<div id="userLvl" class="absolute">lvl 100</div>
+				<div id = "userName" class="absolute"></div>
+				<div id="userLvl" class="absolute"></div>
 				<div id="userHealthBarHolder" class="absolute">
 					<div id="userHealthBar" class="absolute"></div>
 				</div>
 				<img id = "charmanderInfo" src="img/your_info.png" class="absolute"/>
 
 				<img id = "pikachu" src="img/pikachu.png" class="absolute"/>
-				<div id = "cpuName" class="absolute">Pikachu</div>
-				<div id="cpuLvl" class="absolute">lvl 100</div>
+				<div id = "cpuName" class="absolute"></div>
+				<div id="cpuLvl" class="absolute"></div>
 				<div id="cpuHealthBarHolder" class="absolute">
 					<div id="cpuHealthBar" class="absolute"></div>
 				</div>
