--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				</div>
 				<img id = "pikachuInfo" src="img/enemy_info.png" class="absolute"/>
 
-				<div id="chatText" class="absolute text-subhead">What will Charmander do?</div>
+				<div id="chatText" class="absolute text-subhead"></div>
 
 				<img src="img/grass.png" class="innerBattleScreen" />
 				<img src="img/chat_window.png" class="innerBattleScreen" />
