added prepare to attack function, cpu jumps to indicate it's turn

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				</div>
 				<img id = "charmanderInfo" src="img/your_info.png" class="absolute"/>
 
-				<img id = "pikachu" src="img/pikachu.png" class="absolute"/>
+				<img id = "pikachuImage" src="img/pikachu.png" class="absolute"/>
 				<div id = "cpuName" class="absolute"></div>
 				<div id="cpuLvl" class="absolute"></div>
 				<div id="cpuHealthBarHolder" class="absolute">
