Added the attack animation

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 				</div>
 				<img id = "charmanderInfo" src="img/your_info.png" class="absolute"/>
 
+				<img id = "attackImage" src="img/attack.png" class = "absolute hide"/>
+
 				<img id = "pikachuImage" src="img/pikachu.png" class="absolute"/>
 				<div id = "cpuName" class="absolute"></div>
 				<div id="cpuLvl" class="absolute"></div>
