--- a/index.html
+++ b/index.html
@@ -37,24 +37,24 @@
 				<img src="img/chat_window.png" class="innerBattleScreen" />
 			</div>
 			<div id="bottom-screen">
-				<div id="users-buttons">
+				<div id="users-buttons" class = "hide">
 					<div id="move1-Button">
-						<div id="move1-Text" class="absolute text-18 text-center">Ember</div>
+						<div id="move1-Text" class="absolute text-18 text-center"></div>
 						<img src="img/move.png" id="move1Button"/>
 					</div>
 
 					<div id="move2-Button">
-						<div id="move2-Text" class="absolute text-18 text-center">Scratch</div>
+						<div id="move2-Text" class="absolute text-18 text-center"></div>
 						<img src="img/move.png" id="move2Button"/>
 					</div>
 
 					<div id="move3-Button">
-						<div id="move3-Text" class="absolute text-18 text-center">Leer</div>
+						<div id="move3-Text" class="absolute text-18 text-center"></div>
 						<img src="img/move.png" id="move3Button"/>
 					</div>
 
 					<div id="move4-Button">
-						<div id="move4-Text" class="absolute text-18 text-center">Growl</div>
+						<div id="move4-Text" class="absolute text-18 text-center"></div>
 						<img src="img/move.png" id="move4Button"/>
 					</div>
 				</div>
