updated game over message and slowed down game by setting timeout on loop calls

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						<img src="img/move.png" id="move4Button"/>
 					</div>
 				</div>
-				<div id="gameOver" class="absolute text-30 text-center hide">GAME OVER</div>
+				<div id="gameOver" class="absolute text-30 text-center hide">Game Over - Refresh to play again!</div>
 				<img src="img/toolbar_bg.png" class="innerBattleScreen" />
 
 			</div>
