made choosing screen

--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
 	</head>
 	
 	<body>
-		<div id="main-container" class="bullseye box-shadow-1 border-radius">
+		<div id="choosePokemon" class="bullseye box-shadow-1 border-radius">
+			<div id="CharmanderChoose">
+				<img id="CharmanderChooseImage" src="img/CharmanderChoose.png" class="absolute">
+			</div>
+			<div id="CharmanderChoose">
+				<img id="CharmanderChooseImage" src="img/CharmanderChoose.png" class="absolute">
+			</div>
+			<div id="CharmanderChoose">
+				<img id="CharmanderChooseImage" src="img/CharmanderChoose.png" class="absolute">
+			</div>
+		</div>
+		<div id="main-container" class="bullseye box-shadow-1 border-radius hide">
 			<div id="top-screen">
 				<img id = "charmander" src="img/charmander.png" class="absolute"/>
 				<div id = "userName" class="absolute"></div>
