Added the three different starters to the choice screen

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 	</head>
 	
 	<body>
-		<div id="choosePokemon" class="bullseye box-shadow-1 border-radius">
-			<div id="CharmanderChoose">
-				<img id="CharmanderChooseImage" src="img/CharmanderChoose.png" class="absolute">
+		<div id="choosePokemon-container" class="bullseye box-shadow-1 border-radius">
+			<div id="choiceImageHolder">
+				<img id="pokemonImage1" src="img/CharmanderChoose.png" class="absolute">
 			</div>
-			<div id="CharmanderChoose">
-				<img id="CharmanderChooseImage" src="img/CharmanderChoose.png" class="absolute">
+			<div id="choiceImageHolder">
+				<img id="pokemonImage2" src="img/SquirtleChoose.png" class="absolute">
 			</div>
-			<div id="CharmanderChoose">
-				<img id="CharmanderChooseImage" src="img/CharmanderChoose.png" class="absolute">
+			<div id="choiceImageHolder">
+				<img id="pokemonImage3" src="img/BulbasaurChoose.png" class="absolute">
 			</div>
 		</div>
 		<div id="main-container" class="bullseye box-shadow-1 border-radius hide">
