Cursor now acts like a pointer above the three pokemon

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 	<body>
 		<div id="choosePokemon-container" class="bullseye box-shadow-1 border-radius">
 			<div id="choiceImageHolder">
-				<img id="pokemonImage1" src="img/CharmanderChoose.png" class="absolute">
+				<img id="pokemonImage1" src="img/CharmanderChoose.png" class="absolute pointer">
 			</div>
 			<div id="choiceImageHolder">
-				<img id="pokemonImage2" src="img/SquirtleChoose.png" class="absolute">
+				<img id="pokemonImage2" src="img/SquirtleChoose.png" class="absolute pointer">
 			</div>
 			<div id="choiceImageHolder">
-				<img id="pokemonImage3" src="img/BulbasaurChoose.png" class="absolute">
+				<img id="pokemonImage3" src="img/BulbasaurChoose.png" class="absolute pointer">
 			</div>
 		</div>
 		<div id="main-container" class="bullseye box-shadow-1 border-radius hide">
