trying to make images for each pokemon work

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 		</div>
 		<div id="main-container" class="bullseye box-shadow-1 border-radius hide">
 			<div id="top-screen">
-				<img id = "charmander" src="img/charmander.png" class="absolute"/>
+				<img id = "playerPokemon" src="img/charmander.png" class="absolute"/>
 				<div id = "userName" class="absolute"></div>
 				<div id="userLvl" class="absolute"></div>
 				<div id="userHealthBarHolder" class="absolute">
 					<div id="userHealthBar" class="absolute"></div>
 				</div>
-				<img id = "charmanderInfo" src="img/your_info.png" class="absolute"/>
+				<img id = "PlayerPokemon-Info" src="img/your_info.png" class="absolute"/>
 
 				<img id = "attackImage" src="img/attack.png" class = "absolute hide"/>
 
