Added text to tell people to choose their Pokemon

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	
 	<body>
 		<div id="choosePokemon-container" class="bullseye box-shadow-1 border-radius">
+			<div id = "chooseText">Choose your Pokemon!</div>
 			<div id="choiceImageHolder">
 				<img id="pokemonImage1" src="img/CharmanderChoose.png" class="absolute pointer">
 			</div>
